--- a/app/src/main/res/layout/fragment_account_creation.xml
+++ b/app/src/main/res/layout/fragment_account_creation.xml
@@ -123,6 +123,7 @@
         android:text="@string/sign_up"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
+        android:backgroundTint="@android:color/black" 
         app:layout_constraintTop_toBottomOf="@+id/termsCheckBox"
         app:layout_constraintStart_toStartOf="@+id/termsCheckBox"
         app:layout_constraintEnd_toEndOf="@+id/termsCheckBox" />
@@ -135,6 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/back_to_login"
+        android:textColor="@android:color/black" 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
