--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/forgot_password"
         android:textAppearance="?attr/textAppearanceCaption"
+        android:textColor="@android:color/black"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
         app:layout_constraintEnd_toEndOf="@id/passwordInputLayout" />
 
@@ -81,6 +82,7 @@
         android:text="@string/login"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
+        android:backgroundTint="@android:color/black"
         app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton"
         app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
         app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout" />
@@ -94,6 +96,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/biometric_login"
         android:textAppearance="?attr/textAppearanceCaption"
+        android:textColor="@android:color/black"
         app:icon="@drawable/ic_fingerprint"
         app:iconGravity="textStart"
         app:iconPadding="8dp"
@@ -109,6 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/sign_up"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
