--- a/app/src/main/res/layout/fragment_startup.xml
+++ b/app/src/main/res/layout/fragment_startup.xml
@@ -71,7 +71,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_feature_track"
-                app:tint="?attr/colorPrimary" />
+                app:tint="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -95,7 +95,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_feature_goals"
-                app:tint="?attr/colorPrimary" />
+                app:tint="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -120,7 +120,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_feature_notifications"
-                app:tint="?attr/colorPrimary" />
+                app:tint="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -143,6 +143,7 @@
         android:text="@string/get_started"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
+        android:backgroundTint="@android:color/black"
         app:layout_constraintBottom_toTopOf="@id/termsTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
