--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/bottom_nav_reports" />
 
     <item
+        android:id="@+id/rewardsFragment"
+        android:icon="@drawable/ic_rewards"
+        android:title="@string/bottom_nav_rewards" />
+
+    <item
         android:id="@+id/profileFragment" 
         android:icon="@drawable/ic_profile" 
         android:title="@string/bottom_nav_profile" />
